--- a/src/css/pagamento.css
+++ b/src/css/pagamento.css
@@ -17,6 +17,7 @@
  
  body{
      background: #f8f8f8;
+     position: relative;
  }
  
  .btn{
@@ -173,5 +174,139 @@ label{
  
 .peperonildo{
     display: inline-block;
-    padding: 1.3rem 4.41rem;
-}    
+    padding: .2rem 2rem;
+    border: .2rem solid  #FF0000;
+    color: black;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: .5rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: -200rem;
+    background-color: #fff;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.peperonildo::before{
+  content: '';
+  position: absolute;
+  top: 0; right: 0;
+  width: 0%;
+  height: 100%;
+  background: #FF0000;
+  transition: .3s linear;
+  z-index: -1;
+}
+
+.peperonildo:hover::before{
+   width: 100%;
+   left:0 ;
+}
+
+.peperonildo:hover{
+    color: black;
+}
+
+
+
+  .revisar {
+    text-align: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: black;
+  }
+
+  .joe{
+    display: inline-block;
+    padding: .2rem 2rem;
+    border: .2rem solid  #FF0000;
+    color: black;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: .5rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: 15rem;
+    background-color: #fff;
+}
+
+.joe::before{
+  content: '';
+  position: absolute;
+  top: 0; right: 0;
+  width: 0%;
+  height: 100%;
+  background: #FF0000;
+  transition: .3s linear;
+  z-index: -1;
+}
+
+.joe:hover::before{
+   width: 100%;
+   left:0 ;
+}
+
+.joe:hover{
+    color: black;
+}
+
+
+
+ .revisar .box-Contenter{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 85px;
+    justify-content: flex-end; 
+    
+}
+
+.revisar .box-Contenter .boxi{
+    padding: 3rem 6.2rem;
+    background-color: #fff;
+    box-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0);
+    border: 0.2rem solid rgba(0, 0, 0, .3);
+    border-radius: .5rem;
+    text-align: center;
+    position: relative;
+    margin-top: -70px;
+}
+
+h6{
+    margin-top: -650px;
+    color: black;
+    margin-left: 865px;
+    font-size: 22px;
+ }
+
+ 
+
+.pagamento .content{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-top: 85px; 
+}
+
+.pagamento .content .caixa{
+    padding: 2rem;
+    background: #fff;
+    box-shadow: 0.1rem 0.1rem rgba(0, 0, 0, .1);
+    border: 0.2rem solid rgba(0, 0, 0, .3);
+    border-radius: .5rem;
+    text-align: center;
+    flex: 0 0 1rem;
+    position: relative;
+    margin-top: -65px;
+}
+
+.pagamento .queijudao {
+    width: 50px; 
+    height: 50px; 
+    margin-top: 5px;
+    
+}
