--- a/src/css/conta.css
+++ b/src/css/conta.css
@@ -82,6 +82,10 @@ header {
 
 #conta img{
     border-radius: 0%;
+    margin-top: 0%;
+    width: 760px;
+    height: 760px;
+    position: static;
 }
 
 .new-conta{
